--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "react": "16.3.2",
     "nuclide-debugger-common": "0.7.1"
   },
+  "package-deps": [
+    "atom-ide-ui",
+    "tool-bar:1.1.7",
+    "language-swift-89"
+  ],
   "consumedServices": {
     "console": {
       "versions": {
@@ -36,10 +41,6 @@
       }
     }
   },
-  "package-deps": [
-    "atom-ide-ui",
-    "tool-bar:1.1.7"
-  ],
   "configSchema": {
     "swift": {
       "title": "swift binary location",
