--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "react": "16.3.2",
-    "nuclide-debugger-common": "0.7.1"
+    "nuclide-debugger-common": "0.7.1",
+    "atom-select-list": "0.7.1"
   },
   "package-deps": [
     "atom-ide-ui",
