--- a/package.json
+++ b/package.json
@@ -1,77 +1,82 @@
 {
-  "name": "ide-swift",
-  "main": "./lib/ide-swift",
-  "version": "0.1.6",
-  "description": "Swift support for Atom IDE.",
-  "keywords": [
-    "swift",
-    "debugger",
-    "swift package manager",
-    "lldb",
-    "ide"
-  ],
-  "repository": "https://github.com/elegantchaos/atom-ide-swift",
-  "license": "MIT",
-  "engines": {
-    "atom": ">= 1.19.0"
-  },
-  "dependencies": {
-    "react": "16.3.2",
-    "nuclide-debugger-common": "0.7.1",
-    "atom-select-list": "0.7.1"
-  },
-  "package-deps": [
-    "atom-ide-ui",
-    "tool-bar:1.1.7",
-    "language-swift-89"
-  ],
-  "consumedServices": {
-    "console": {
-      "versions": {
-        "0.1.0": "consumeConsole"
-      }
+    "name": "ide-swift",
+    "main": "./lib/ide-swift",
+    "version": "0.1.6",
+    "description": "Swift support for Atom IDE.",
+    "keywords": [
+        "swift",
+        "debugger",
+        "swift package manager",
+        "lldb",
+        "ide"
+    ],
+    "repository": "https://github.com/elegantchaos/atom-ide-swift",
+    "license": "MIT",
+    "engines": {
+        "atom": ">= 1.19.0"
     },
-    "debugger.remote": {
-      "versions": {
-        "0.0.0": "consumeDebugger"
-      }
+    "dependencies": {
+        "react": "16.3.2",
+        "nuclide-debugger-common": "0.7.1",
+        "atom-select-list": "0.7.1"
     },
-    "tool-bar": {
-      "versions": {
-        "^0 || ^1": "consumeToolBar"
-      }
+    "package-deps": [
+        "atom-ide-ui",
+        "tool-bar:1.1.7",
+        "language-swift-89"
+    ],
+    "consumedServices": {
+        "console": {
+            "versions": {
+                "0.1.0": "consumeConsole"
+            }
+        },
+        "debugger.remote": {
+            "versions": {
+                "0.0.0": "consumeDebugger"
+            }
+        },
+        "tool-bar": {
+            "versions": {
+                "^0 || ^1": "consumeToolBar"
+            }
+        },
+        "linter-indie": {
+            "versions": {
+                "2.0.0": "consumeIndie"
+            }
+        },
+        "atom-ide-busy-signal": {
+            "versions": {
+                "0.1.0": "consumeBusySignal"
+            }
+        }
     },
-    "linter-indie": {
-      "versions": {
-        "2.0.0": "consumeIndie"
-      }
+    "providedServices": {
+        "autocomplete.provider": {
+            "versions": {
+                "2.0.0": "getProvider"
+            }
+        }
+    },
+    "configSchema": {
+        "swift": {
+            "title": "swift binary location",
+            "description": "The location of the swift binary.\n \nDefault behaviour if this setting is left empty is to search for a command called `swift`, but you can specify an explicit path or different command here if required.",
+            "type": "string",
+            "default": ""
+        },
+        "lldb": {
+            "title": "lldb binary location",
+            "description": "The location of the lldb binary.\n \nDefault behaviour if this setting is left empty is to search for a command called `lldb`, but you can specify an explicit path or different command here if required.",
+            "type": "string",
+            "default": ""
+        },
+        "sourceKittenLocation": {
+            "title": "SourceKitten Location",
+            "description": "The binary to run to obtain completions.\n \nDefault behaviour if this setting is left empty is to search for a command called `sourcekitten`, but you can specify an explicit path or different command here if required.",
+            "type": "string",
+            "default": ""
+        }
     }
-  },
-  "providedServices": {
-    "autocomplete.provider": {
-      "versions": {
-        "2.0.0": "getProvider"
-      }
-    }
-  },
-  "configSchema": {
-    "swift": {
-      "title": "swift binary location",
-      "description": "The location of the swift binary.\n \nDefault behaviour if this setting is left empty is to search for a command called `swift`, but you can specify an explicit path or different command here if required.",
-      "type": "string",
-      "default": ""
-    },
-    "lldb": {
-      "title": "lldb binary location",
-      "description": "The location of the lldb binary.\n \nDefault behaviour if this setting is left empty is to search for a command called `lldb`, but you can specify an explicit path or different command here if required.",
-      "type": "string",
-      "default": ""
-    },
-    "sourceKittenLocation": {
-      "title": "SourceKitten Location",
-      "description": "The binary to run to obtain completions.\n \nDefault behaviour if this setting is left empty is to search for a command called `sourcekitten`, but you can specify an explicit path or different command here if required.",
-      "type": "string",
-      "default": ""
-    }
-  }
 }
