--- a/package.json
+++ b/package.json
@@ -44,12 +44,17 @@
         },
         "linter-indie": {
             "versions": {
-                "2.0.0": "consumeIndie"
+                "2.0.0": "consumeLinterV2"
             }
         },
         "atom-ide-busy-signal": {
             "versions": {
                 "0.1.0": "consumeBusySignal"
+            }
+        },
+        "datatip": {
+            "versions": {
+                "0.1.0": "consumeDatatip"
             }
         }
     },
