--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "repository": "https://github.com/elegantchaos/atom-ide-swift",
     "license": "MIT",
     "engines": {
-        "atom": ">= 1.19.0"
+        "atom": ">= 1.21.0"
     },
     "dependencies": {
         "react": "16.3.2",
@@ -25,6 +25,9 @@
         "atom-ide-ui",
         "tool-bar:1.1.7",
         "language-swift-89"
+    ],
+    "enhancedScopes": [
+        "source.swift"
     ],
     "consumedServices": {
         "console": {
